--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,11 +22,11 @@
       type="text/css"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link
+    <!-- <link
       href="//db.onlinewebfonts.com/c/157c6cc36dd65b1b2adc9e7f3329c761?family=Amazon+Ember"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
     <!-- <link rel="stylesheet" type="text/css" href="./design.css" /> -->
 
     <title>Sai Enterprise</title>
